--- a/index.html
+++ b/index.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Calorie Counter</title>
+    <title>Счетчик Калорий</title>
   </head>
   <body>
     <main>
-      <h1>Calorie Counter</h1>
+      <h1>Счетчик Калорий</h1>
       <div class="container">
         <form id="calorie-counter">
-          <label for="budget">Budget</label>
+          <label for="budget">Бюджет</label>
           <input
             type="number"
             min="0"
             id="budget"
-            placeholder="Daily calorie budget"
+            placeholder="Суточный бюджет калорий"
             required
           />
           <fieldset id="breakfast">
-            <legend>Breakfast</legend>
+            <legend>Завтрак</legend>
             <div class="input-container"></div>
           </fieldset>
           <fieldset id="lunch">
-            <legend>Lunch</legend>
+            <legend>Обед</legend>
             <div class="input-container"></div>
           </fieldset>
           <fieldset id="dinner">
-            <legend>Dinner</legend>
+            <legend>Ужин</legend>
             <div class="input-container"></div>
           </fieldset>
           <fieldset id="snacks">
-            <legend>Snacks</legend>
+            <legend>Закуски</legend>
             <div class="input-container"></div>
           </fieldset>
           <fieldset id="exercise">
-            <legend>Exercise</legend>
+            <legend>Тренировки</legend>
             <div class="input-container"></div>
           </fieldset>
           <div class="controls">
             <span>
-              <label for="entry-dropdown">Add food or exercise:</label>
+              <label for="entry-dropdown">Добавить еду или тренировки:</label>
               <select id="entry-dropdown" name="options">
-                <option value="breakfast" selected>Breakfast</option>
-                <option value="lunch">Lunch</option>
-                <option value="dinner">Dinner</option>
-                <option value="snacks">Snacks</option>
-                <option value="exercise">Exercise</option>
+                <option value="breakfast" selected>Завтрак</option>
+                <option value="lunch">Обед</option>
+                <option value="dinner">Ужин</option>
+                <option value="snacks">Закуски</option>
+                <option value="exercise">Тренировки</option>
               </select>
-              <button type="button" id="add-entry">Add Entry</button>
+              <button type="button" id="add-entry">Добавить Запись</button>
             </span>
           </div>
           <div>
             <button type="submit">
-              Calculate Remaining Calories
+              Расчитать оставшиеся калории
             </button>
-            <button type="button" id="clear">Clear</button>
+            <button type="button" id="clear">Очистить</button>
           </div>
         </form>
         <div id="output" class="output hide"></div>
